Switch messaging to facts + phone index
Replace materialized Messaging/Proof qualification indexes with bounded Worker Facts reads plus the independent Phone Index, and add qualified worker.messaging.phone lookup for direct sender-phone messages. This keeps Pool stock separate from direct identity selection, updates Matching composition and refill coordination, and aligns docs/tests with the new eligibility model and stricter Fact validation.